- Fix apc_load_constants (Gopal)
- Rewrite dump opcode code to use vld (Gopal)
- Use apc_[ewn]print functions for error reporting (Shire) 
- Auto global fixes and refactoring (Gopal, Shire)
- Fix memory leaks in object serialization (Ilia)
- Memory cleanup code for destructor order (Gopal)
- Win32 build fixes (Ilia, Wez)
- ZTS and Php 4 build fixes (Bjori)
- Add apc_add() function (Rasmus)

3.0.12p2: 2006-09-05
- Package version up

3.0,12p1: 2006-09-05
- PHP4 build fixes

3.0.12: 2006-09-05
- PHP 5.2 compatibility (Gopal)
- TSRM fixes (Gopal)
- Add extra flags to op_array->reserved to improve op array 
  processing code (Gopal)
- Fix crashes in optimizer and cli mode (Ilia)
- Optimizer fixes for PHP5 (Ilia, Gopal)
- Allow multiple inclusions of a file with a dynamic class (Gopal)
- Php 4 function table and properties fixes (Gopal)
- Fix memory leaks in apc_cache_info (Gopal)

3.0.11: 2006-08-16
- Made --enable-apc-mmap the default compile option (for real this time)
- Add an optional flag to apc_cache_info() and some apc.php tweaks to make it
  only fetch header information to make it useful when you have tens of
  thousands of entries.  (Brian Shire)
- 64-bit fixes (George)
- Don't mix Full Path and Inode keys (George)
- Override ZEND_INCLUDE_OR_EVAL opcode (when possible) to speed up use of
  require_once() and include_once() statements. (Sara)
- Add a non-blocking write_lock for cache inserts.  This is a better approach
  to prevent cache slams and deprecates the slam_defense setting. (Rasmus)
- A bit of work on the optimizer.  (Sara)
- Various memory issues resolved. (Gopal)

3.0.10: 2006-03-11
- Add apc.stat ini flag which defaults to 1.  If set to 0, the main script and any fullpath
  includes will not be stat'ed for any changes.  You will have to restart the server if you
  change anything.  This mode increases performance quite a bit, especially if you have a
  lot of includes.
